--- a/fitness2/index.css
+++ b/fitness2/index.css
@@ -7,7 +7,7 @@
     font-family: "Inter", sans-serif;
 }
 body {
-    width: 80%;
+    width: 85%;
     margin: 5% auto;
     background: #222222;
 }
@@ -44,20 +44,20 @@ body {
 }
 .nav-bar .action li:first-child {
     background: #E6533C;
-    padding: 8px;
+    padding: 8px 0;
     margin-left: 3px;
-    border-radius: 2rem;
+    border-radius: 20px;
 }
 /* nav bar section end */
 
 .bannar {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 50% 50%;
     align-items: center;
 }
 
 .bannar .bannar-left {
-    padding-top: 5.5rem;
+    margin-top: 5.5rem;
 }
 .bannar .bannar-left p {
     margin: 1.5rem 0;
@@ -82,9 +82,9 @@ body {
 
 .bannar .bannar-right {
     width: 100%;
-    height: 100%;
+    height: 105%;
     background-image: url(./images/Images\ 2.png);
-    background-position: 20px 30px;
+    background-position: 150px 30px;
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -93,15 +93,44 @@ body {
     display: flex;
     align-items: end;
     justify-content: space-between;
+    padding-bottom: 3rem;
 }
 .bannar-right .tutorial {
     display: flex;
-    background-color: #303030;
-    padding: 1rem;
+    gap: 1rem;;
+    margin-left: 50px;
 }
-.bannar-right .tutorial .circle-red {
-    width: 50px;
-    height: 50px;
-    background-color: #E6533C;
-    border-radius: 50%;
+.bannar-right .banner-content {
+    padding: 1rem 1.5rem;
+    color: #999999;
+    border-radius: 1rem;
+    border: 1px solid rgba(255, 255, 255, 0.10);
+    background: rgba(48, 48, 48, 0.54);
+    backdrop-filter: blur(10px);
+}
+.bannar-right .tutorial .video-icon {
+    display: flex;
+    align-items: center;
+    color: #E6533C;
+}
+.video-icon .material-symbols-outlined {
+    font-size: 2rem;
+    overflow: hidden;
+}
+.bannar-right h2 {
+    color: white;
+}
+.bannar-right p {
+    font-size: 14px;
+}
+.banner-video-turorial {
+    margin-top: 5px;
+}
+
+.bannar-right .workout {
+    margin-bottom: 250px;
+    margin-right: 1.9rem;
+}
+.five-hund {
+    font-size: 2rem !important;
 }
