--- a/explore-react-form/src/App.css
+++ b/explore-react-form/src/App.css
@@ -1,43 +1,37 @@
 @import "tailwindcss";
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+	max-width: 1280px;
+	margin: 0 auto;
+	padding: 2rem;
+	text-align: center;
+	box-sizing: border-box;
+	outline: none;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+input {
+	outline: none;
+	border: 1px solid #FFB900;
+	margin-bottom: 15px;
+	border-radius: 0.5rem;
+	padding: 5px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+input::placeholder {
+	text-align: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input:focus {
+	background: #FFB900;
+	color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.submit {
+	background: black;
+	border: none;
+	padding: 10px 20px;
+	margin-top: 30px;
 }
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+/* :root {
+	--color-amber-400: var(--color-amber-400);
+	--color-amber-500: var(--color-amber-500);
+} */
